--- a/playbooks/bind-playbook/roles/templates/named.conf.j2
+++ b/playbooks/bind-playbook/roles/templates/named.conf.j2
@@ -69,5 +69,5 @@ logging {
 //  file "named.ca";
 //};
 
-include "/etc/named/named.rfc1912.zones";
+include "/etc/named.rfc1912.zones";
 include "/etc/named.root.key";
